# SWE_HW1

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cred.yaml  pyproject.toml  sonar-project.properties  sql_connection.py  swe_vending.sql  tox.ini
.github/workflows/: python-tests.yml
command_template/: product_command.py  purchase_command.py  stock_command.py  vending_machine_command.py
commands/: product_command.py  stock_command.py  vending_machine_command.py
routes/: get_mysql.py  product_routes.py  purchase_routes.py  stock_routes.py  vending_machine_routes.py
sql/: sql_connection.py  swe_vending.sql
sql_script/: swe_vending.sql
src/: app.py
tests/: conftest.py  swe_vending.sql  test_product.py  test_purchase.py  test_stock.py  test_text_and_num_checker.py  test_vending_machine.py
